# devops-engineer-from-scratch-project-313

./: .gitignore  Dockerfile  Makefile  README.md  app.py  package-lock.json  pyproject.toml
.github/workflows/: main.yml
deploy/: default.conf  devops-project-313.conf  entrypoint.sh
src/: app.py  db.py  errors.py  helpers.py  main.py  models.py  routes.py
src/routes/: __init__.py  create_link.py  delete_link_by_id.py  ping.py  read_link_by_id.py  read_links.py  redirect.py  update_link_by_id.py
src/routes/api/: __init__.py  create_link.py  delete_link_by_id.py  read_link_by_id.py  read_links.py  update_link_by_id.py
tests/: app_test.py  test_routes.py
